--- a/index.css
+++ b/index.css
@@ -119,5 +119,13 @@ nav button{
     }
 
     .email-signup{
-        
+        background-color: #fff;
+        border-radius: 4px;
+        display: flex;
+        overflow: hidden;
+        align-items: center;
+        margin-top: 30px;
+        overflow: hidden;
     }
+
+    
