footer is running

--- a/index.css
+++ b/index.css
@@ -400,3 +400,6 @@ input[type="radio"]{
 .faq small{
     font-size: 13px;
 }
+
+/*---------------------------------------------------------------------- foogter---------------------------------------------------------------- */
+
