--- a/index.css
+++ b/index.css
@@ -403,3 +403,6 @@ input[type="radio"]{
 
 /*---------------------------------------------------------------------- foogter---------------------------------------------------------------- */
 
+.footer{
+    display: flex;
+}
