--- a/index.css
+++ b/index.css
@@ -433,3 +433,15 @@ input[type="radio"]{
     font-size: 14px;
     margin-bottom: 10px;
 }
+
+.footer .language-btn{
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 3px;
+}
+
+.copyright-txt{
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
